Reactive: resolve warnings